# bevy_collider_gen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yaml  publish.yaml  tag-and-publish-crate.yaml
assets/font/: OFL.txt
examples/: avian2d_colliders.rs  colliders.rs  rapier2d_colliders.rs  texture_atlas.rs  xpbd_2d_colliders.rs
src/: avian2d.rs  collider.rs  collider_type.rs  edge.rs  from.rs  lib.rs  rapier2d.rs  utils.rs
src/abstract_collider/: avian2d.rs  mod.rs  rapier2d.rs
src/abstract_collider/builder/: from.rs  mod.rs
src/collider/: avian2d.rs  mod.rs  rapier2d.rs  xpbd_2d.rs
src/plugin/: components.rs  mod.rs  systems.rs  utils.rs
