[package]
name = "bevy_collider_gen"
# don't manually edit this version unless you're sure you want to circumvent the process documented in RELEASE.md
version = "0.3.0"
edition = "2021"
homepage = "https://github.com/shnewto/bevy_collider_gen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shnewto/bevy_collider_gen"

description = "a library for generating colliders, for bevy apps, from images with transparency"
keywords = ["bevy", "rapier", "png", "collider", "2d"]
readme = "README.md"

exclude = ["assets/*", ".github/*", "examples/*"]
include = ["/LICENSE-APACHE", "/LICENSE-MIT", "/README.md", "/src/"]

[lints.clippy]
cast_precision_loss = { level = "allow", priority = 1 }
pedantic = { level = "warn", priority = 0 }

[features]
default = ["rapier2d", "parallel"]
avian2d = ["dep:avian2d"]
rapier2d = ["dep:bevy_rapier2d"]
parallel = ["avian2d/parallel", "bevy_rapier2d/parallel", "edges/parallel"]

[dependencies]
cfg-if = "1"
image = { version = "0.25", default-features = false }
edges = { git = "https://github.com/shnewto/edges", branch = "dev" }
bevy_math = { version = "0.15", default-features = false }
bevy_image = { version = "0.15", default-features = false }

[dependencies.bevy_rapier2d]
version = "0.28"
optional = true
default-features = false
features = ["dim2", "headless"]

[dependencies.avian2d]
version = "0.2"
optional = true
default-features = false
features = ["2d", "parry-f32"]

[dev-dependencies]
bevy = "0.15"
bevy_prototype_lyon = "0.13"
indoc = "2"

[dev-dependencies.bevy_rapier2d]
version = "0.28"
default-features = false
features = ["dim2", "headless", "debug-render-2d"]

[dev-dependencies.avian2d]
version = "0.2"
default-features = false
features = ["2d", "parry-f32", "debug-plugin"]

[[example]]
name = "avian2d_colliders"
path = "examples/avian2d_colliders.rs"
required-features = ["avian2d"]

[[example]]
name = "rapier2d_colliders"
path = "examples/rapier2d_colliders.rs"
required-features = ["rapier2d"]
