[package]
name = "bevy_collider_gen"
# don't manually edit this version unless you're sure you want to circumvent the process documented in RELEASE.md
version = "0.4.0"
edition = "2021"
homepage = "https://github.com/shnewto/bevy_collider_gen"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shnewto/bevy_collider_gen"

description = "a library for generating colliders, for bevy apps, from images with transparency"
keywords = ["bevy", "rapier", "png", "collider", "2d"]
readme = "README.md"

exclude = ["assets/*", ".github/*", "examples/*"]
include = ["/LICENSE-APACHE", "/LICENSE-MIT", "/README.md", "/src/"]

[lints.clippy]
cast_precision_loss = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
pedantic = { level = "warn", priority = 0 }

[features]
default = ["rapier2d", "parallel", "plugin"]
avian2d = ["dep:avian2d"]
rapier2d = ["dep:bevy_rapier2d"]
parallel = ["edges/parallel"]
plugin = ["bevy/bevy_sprite", "bevy/bevy_asset", "bevy/bevy_log"]

[dependencies]
image = { version = "0.25", default-features = false }
edges = "0.8.1"
bevy = { version = "0.16", default-features = false, features = ["bevy_image"] }

[dependencies.bevy_rapier2d]
version = "0.30"
optional = true
default-features = false
features = ["dim2", "headless"]

[dependencies.avian2d]
version = "0.3"
optional = true
default-features = false
features = ["2d", "parry-f32"]

[dev-dependencies]
bevy = "0.16"
bevy_prototype_lyon = { git = "https://github.com/rparrett/bevy_prototype_lyon", branch = "fix-dynamic-examples" }
indoc = "2"

[dev-dependencies.bevy_rapier2d]
version = "0.30"
features = ["debug-render-2d"]

[dev-dependencies.avian2d]
version = "0.3"
features = ["debug-plugin"]

[[example]]
name = "avian2d_colliders"
path = "examples/avian2d_colliders.rs"
required-features = ["avian2d"]

[[example]]
name = "rapier2d_colliders"
path = "examples/rapier2d_colliders.rs"
required-features = ["rapier2d"]
